Funcionalidad y mejorar en el menu Usuarios ---> Agregamos reportes para usuarios

--- a/App.config
+++ b/App.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 
 	<connectionStrings>
-		<add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION;Integrated Security=True" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+  <add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+
+  <add name="CapaPresentación.Properties.Settings.DBVENTASGESTIONConnectionString"
+   connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	
 </configuration>
