--- a/CapaPresentación.csproj
+++ b/CapaPresentación.csproj
@@ -84,6 +84,12 @@
     <Compile Include="FomsModulos\frmConfiguracion.Designer.cs">
       <DependentUpon>frmConfiguracion.cs</DependentUpon>
     </Compile>
+    <Compile Include="FomsModulos\frmSocios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FomsModulos\frmSocios.Designer.cs">
+      <DependentUpon>frmSocios.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdConfiguracion\frmNegocio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,11 +126,23 @@
     <Compile Include="MdConfiguracion\frmSucursales.Designer.cs">
       <DependentUpon>frmSucursales.cs</DependentUpon>
     </Compile>
+    <Compile Include="MdConfiguracion\frmTiposContribuyentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdConfiguracion\frmTiposContribuyentes.Designer.cs">
+      <DependentUpon>frmTiposContribuyentes.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdConfiguracion\frmUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MdConfiguracion\frmUsuarios.Designer.cs">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdSocios\frmClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdSocios\frmClientes.Designer.cs">
+      <DependentUpon>frmClientes.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -133,6 +151,9 @@
     <Compile Include="Utilidades\OpcionCombo.cs" />
     <EmbeddedResource Include="FomsModulos\frmConfiguracion.resx">
       <DependentUpon>frmConfiguracion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FomsModulos\frmSocios.resx">
+      <DependentUpon>frmSocios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdConfiguracion\frmNegocio.resx">
       <DependentUpon>frmNegocio.cs</DependentUpon>
@@ -152,10 +173,16 @@
     <EmbeddedResource Include="MdConfiguracion\frmSucursales.resx">
       <DependentUpon>frmSucursales.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MdConfiguracion\frmTiposContribuyentes.resx">
+      <DependentUpon>frmTiposContribuyentes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MdConfiguracion\frmUsuarios.resx">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdConfiguracion\ReporteListaUsuarios.rdlc" />
+    <EmbeddedResource Include="MdSocios\frmClientes.resx">
+      <DependentUpon>frmClientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
