--- a/CapaPresentación.csproj
+++ b/CapaPresentación.csproj
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>packages\FontAwesome.Sharp.6.3.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.3, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>packages\iTextSharp.5.5.13.3\lib\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
@@ -59,7 +65,10 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Net" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -70,7 +79,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBVENTASGESTIONDataSet.Designer.cs">
@@ -95,6 +106,12 @@
     </Compile>
     <Compile Include="FomsModulos\frmSocios.Designer.cs">
       <DependentUpon>frmSocios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FomsModulos\frmVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FomsModulos\frmVentas.Designer.cs">
+      <DependentUpon>frmVentas.cs</DependentUpon>
     </Compile>
     <Compile Include="MdConfiguracion\frmMetodosPagos.cs">
       <SubType>Form</SubType>
@@ -162,6 +179,12 @@
     <Compile Include="MdConfiguracion\frmUsuarios.Designer.cs">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="MdInventarios\frmActProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdInventarios\frmActProducto.Designer.cs">
+      <DependentUpon>frmActProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdInventarios\frmCrudCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -174,11 +197,29 @@
     <Compile Include="MdInventarios\frmCrudSubCategoria.Designer.cs">
       <DependentUpon>frmCrudSubCategoria.cs</DependentUpon>
     </Compile>
+    <Compile Include="MdInventarios\frmCrudProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdInventarios\frmCrudProducto.Designer.cs">
+      <DependentUpon>frmCrudProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdInventarios\frmDetalleProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdInventarios\frmDetalleProducto.Designer.cs">
+      <DependentUpon>frmDetalleProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdInventarios\frmGestionProductos.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MdInventarios\frmGestionProductos.Designer.cs">
       <DependentUpon>frmGestionProductos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdInventarios\frmTipoUnidades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdInventarios\frmTipoUnidades.Designer.cs">
+      <DependentUpon>frmTipoUnidades.cs</DependentUpon>
     </Compile>
     <Compile Include="MdSocios\frmClientes.cs">
       <SubType>Form</SubType>
@@ -191,6 +232,42 @@
     </Compile>
     <Compile Include="MdSocios\frmProveedores.Designer.cs">
       <DependentUpon>frmProveedores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\frmListaVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\frmListaVenta.Designer.cs">
+      <DependentUpon>frmListaVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\frmPuntoVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\frmPuntoVenta.Designer.cs">
+      <DependentUpon>frmPuntoVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\frmVerificadorPrecio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\frmVerificadorPrecio.Designer.cs">
+      <DependentUpon>frmVerificadorPrecio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarClientes.Designer.cs">
+      <DependentUpon>frmListarClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarMetodosPagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarMetodosPagos.Designer.cs">
+      <DependentUpon>frmListarMetodosPagos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmListarProductos.Designer.cs">
+      <DependentUpon>frmListarProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -205,6 +282,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FomsModulos\frmSocios.resx">
       <DependentUpon>frmSocios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FomsModulos\frmVentas.resx">
+      <DependentUpon>frmVentas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdConfiguracion\frmMetodosPagos.resx">
       <DependentUpon>frmMetodosPagos.cs</DependentUpon>
@@ -240,20 +320,51 @@
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdConfiguracion\ReporteListaUsuarios.rdlc" />
+    <EmbeddedResource Include="MdInventarios\frmActProducto.resx">
+      <DependentUpon>frmActProducto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MdInventarios\frmCrudCategoria.resx">
       <DependentUpon>frmCrudCategoria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdInventarios\frmCrudSubCategoria.resx">
       <DependentUpon>frmCrudSubCategoria.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MdInventarios\frmCrudProducto.resx">
+      <DependentUpon>frmCrudProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdInventarios\frmDetalleProducto.resx">
+      <DependentUpon>frmDetalleProducto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MdInventarios\frmGestionProductos.resx">
       <DependentUpon>frmGestionProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdInventarios\frmTipoUnidades.resx">
+      <DependentUpon>frmTipoUnidades.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdSocios\frmClientes.resx">
       <DependentUpon>frmClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdSocios\frmProveedores.resx">
       <DependentUpon>frmProveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\Comprobantes\TipoHoja\ReporteTipoHoja.rdlc" />
+    <EmbeddedResource Include="MdVentas\frmListaVenta.resx">
+      <DependentUpon>frmListaVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\frmPuntoVenta.resx">
+      <DependentUpon>frmPuntoVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\frmVerificadorPrecio.resx">
+      <DependentUpon>frmVerificadorPrecio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\Modal\frmListarClientes.resx">
+      <DependentUpon>frmListarClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\Modal\frmListarMetodosPagos.resx">
+      <DependentUpon>frmListarMetodosPagos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\Modal\frmListarProductos.resx">
+      <DependentUpon>frmListarProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -306,6 +417,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\mdConfiguracion.jpg" />
+    <None Include="Resources\cat.png" />
+    <None Include="Resources\subCat.png" />
+    <None Include="Resources\vertical-line.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -326,6 +440,8 @@
   <ItemGroup>
     <None Include="Resources\remove20.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="MdVentas\Comprobantes\TipoTick\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
