Sistema funcional con mejorar incorporaradas, se trabajo en porcentaje de gananacia y varias modificaciones

--- a/App.config
+++ b/App.config
@@ -7,11 +7,11 @@
     </startup>
 
 	<connectionStrings>
-  <add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION;Integrated Security=True"
+  <add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTIONPR;Integrated Security=True"
    providerName="System.Data.SqlClient" />
 
   <add name="CapaPresentación.Properties.Settings.DBVENTASGESTIONConnectionString"
-   connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION;Integrated Security=True"
+   connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTIONPR;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
