--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
+  <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
 </packages>
