--- a/App.config
+++ b/App.config
@@ -7,8 +7,8 @@
     </startup>
 
 	<connectionStrings>
-  <add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION1;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="CapaPresentación.Properties.Settings.cadena_reportes" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DBVENTASGESTION1;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="cadena_conexion" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DB_DESPENSA;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="CapaPresentación.Properties.Settings.cadena_reportes" connectionString="Data Source=DESKTOP-RG\SISTEMA;Initial Catalog=DB_DESPENSA;Integrated Security=True" providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
   <runtime>
