--- a/CapaPresentación.csproj
+++ b/CapaPresentación.csproj
@@ -165,6 +165,7 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -404,6 +405,12 @@
     <Compile Include="MdVentas\Modal\frmAperturaCaja.Designer.cs">
       <DependentUpon>frmAperturaCaja.cs</DependentUpon>
     </Compile>
+    <Compile Include="MdVentas\Modal\frmEstadoCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdVentas\Modal\frmEstadoCaja.Designer.cs">
+      <DependentUpon>frmEstadoCaja.cs</DependentUpon>
+    </Compile>
     <Compile Include="MdVentas\Modal\frmListarClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -558,6 +565,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MdVentas\Modal\frmAperturaCaja.resx">
       <DependentUpon>frmAperturaCaja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdVentas\Modal\frmEstadoCaja.resx">
+      <DependentUpon>frmEstadoCaja.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdVentas\Modal\frmListarClientes.resx">
       <DependentUpon>frmListarClientes.cs</DependentUpon>
